MAJOR: 1 BUG issue resolved. 1 STRETCH GOAL issue resolved. 2 CLEANUP issues resolved. 1 CSS BUG issue remains open.

--- a/src/index.css
+++ b/src/index.css
@@ -51,133 +51,148 @@ p {
 }
 
 
-.form-group {
-  padding: 15px;
-}
-
-
-.propertyCard {
-  /* display: flex;
-  flex-wrap: wrap;
-  flex-basis: auto;
-  justify-content: center;
-  flex-direction: column; */
-  background-color: #46a14f;
-  border: 4px solid #000;
-  border-radius: 15px;
-  padding: 8px;
-  margin: 5px;
-}
-
-
-.propertyImage {
-  /* display: flex;
-  flex-direction: row;
-  flex-basis: auto; */
-  background-color: #46a14f;
-  max-width: 100%;
-  margin-bottom: 15px;
-  padding: 8px;
-  background-size: cover;
-  align-items: center;
-  border: 4px solid #000;
-  border-radius: 15px;  
-}
-
-.propertyData {
-  /* display: flex;  
-  flex-basis: auto; */
-  background-color: #46a14f;
-  border: 4px solid #000;
-  width: 270 px;
-  height: 400 px;
-  margin: 10 px;
-  padding: 8px;
-  border-radius: 15px;
-}
-
-.propertyData:hover {
-  background-color: #8a8888;
-  color: #ffffff;
-  transform: scale(1.02);
-  cursor: pointer;
-  transition: all 1s ease;
-}
-
-.userCard {
-  /* display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: flex-start; */
-  flex-direction: column;
-  background-color: #46a14f;
-  border: 4px solid #000;
-  border-radius: 15px;
-  padding: 8px;
-  margin: 5px;    
-  font-family: "Lato", serif;  
-  color: #000; 
-}
-
-
-.userCard:hover {
-  background-color: #8a8888;
-  color: #ffffff;
-  transform: scale(1.02);
-  cursor: pointer;
-  transition: all 1s ease;
-}
-
-
-.maintRequestCard {
-  /* display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: flex-start;
-  flex-direction: column; */
-  background-color: #46a14f;
-  border: 4px solid #000;
-  border-radius: 15px;
-  padding: 8px;
-  margin: 5px;  
-  font-family: "Lato", serif;
-  color: #000;
-} 
-
-.maintRequestCard:hover {
-  background-color: #8a8888;
-  color: #ffffff;
-  transform: scale(1.02);
-  cursor: pointer;
-  transition: all 1s ease;
-}
-
+/* ----- Horizontal Separator Bar -------- */ 
+/* ----- under NavBar on each page ------- */                        
 hr.rounded {
   border-top: 8px solid rgb(20, 88, 26);
   border-radius: 5px;
 }
 
+/* ----- For all forms used -------- */ 
+/* ------ to create or edit  ------- */ 
+.form-group {
+  padding: 15px;
+}
 
-.noteCard {
-  /* display: flex;
+
+/* ----- Container for Property Card 
+    at default route ("/") with two
+    children containers. One for the property 
+    image. One for the property data ------- */ 
+.propertyCard {
+  display: flex;
   flex-wrap: wrap;
-  justify-content: center;
-  align-items: flex-start; */
-  flex-direction: column;
+  margin: 12px;
+  
   background-color: #46a14f;
   border: 4px solid #000;
   border-radius: 15px;
   padding: 8px;
-  margin: 5px;    
+}
+
+          .propertyImage {
+            display: flex;
+            flex-direction: row;
+            flex-basis: auto;
+
+            aspect-ratio: 16 / 9;
+
+            margin: 15px;
+            padding-right: 8px;
+            padding-left: 8px;
+            
+            background-color: #46a14f;
+            
+            border: 4px solid #000;
+            border-radius: 15px; 
+          }
+
+          .propertyData {
+            display: flex;
+            flex-direction: column;            
+
+            margin: 10 px;
+            padding: 8px;
+
+            background-color: #46a14f;
+
+            border: 4px solid #000;
+            border-radius: 15px;
+          }
+
+/* --- Hover effect for Property Data Card --- */
+          .propertyData:hover {
+            background-color: #8a8888;
+            color: #ffffff;
+            transform: scale(1.02);
+            cursor: pointer;
+            transition: all 1s ease;
+          }
+
+
+/* ----- Container for User Card ------- */
+.userCard {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;  
+     
   font-family: "Lato", serif;  
   color: #000; 
+  background-color: #46a14f;
+  border: 4px solid #000;
+  border-radius: 15px;
+  
+  margin: 12px;
+  padding: 8px;
 }
 
+/* --- Hover effect for User Card --- */
+          .userCard:hover {
+            background-color: #8a8888;
+            color: #ffffff;
+            transform: scale(1.02);
+            cursor: pointer;
+            transition: all 1s ease;
+          }
 
-.noteCard:hover {
-  background-color: #8a8888;
-  color: #ffffff;
-  transform: scale(1.02);
-  cursor: pointer;
-  transition: all 1s ease;
+
+/* ----- Container for Maintenance Request Card ------- */
+.maintRequestCard {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;  
+     
+  font-family: "Lato", serif;  
+  color: #000; 
+  background-color: #46a14f;
+  border: 4px solid #000;
+  border-radius: 15px;
+  
+  margin: 12px;
+  padding: 8px;
+} 
+
+/* --- Hover effect for Maint Request Card --- */
+          .maintRequestCard:hover {
+            background-color: #8a8888;
+            color: #ffffff;
+            transform: scale(1.02);
+            cursor: pointer;
+            transition: all 1s ease;
+          }
+
+
+
+/* ----- Container for Manager's Note Card ------- */
+.noteCard {
+  flex-direction: column;
+  flex-wrap: wrap;
+
+  background-color: #46a14f;
+  border: 4px solid #000;
+  border-radius: 15px;
+  margin: 12px;
+  padding: 8px;  
+  
+  font-family: "Lato", serif;  
+  color: #000;   
 }
+
+/* --- Hover effect for Manager's Note Card --- */
+          .noteCard:hover {
+            background-color: #8a8888;
+            color: #ffffff;
+            transform: scale(1.02);
+            cursor: pointer;
+            transition: all 1s ease;
+          }
